crate/lib/sinex-primitives/tests/proof_compile_fail/invalid_subject_query.rs
use sinex_primitives::subject_query;

fn main() {
    let _ = subject_query!("runtime_unit");
}
